Fixed bug that caused project images to overlap. Also changed color of navigation bar.

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,12 @@ body
 	font-size: 23px;
 }
 
+#about
+{
+	padding-left: 80px;
+	padding-right: 80px;
+}
+
 .section
 {
 	padding: 100px 0;
@@ -170,6 +176,11 @@ body
 	text-align: center;
 	padding-bottom: 10px;
 	width: 100%;
+}
+
+.projectContainer
+{
+	min-height: 450px;
 }
 
 .items li
@@ -320,9 +331,10 @@ body
 
 .copyrightSection
 {
-	background-color: #000000;
+	background-color: #333333;
 	color: #FFFFFF;
 	padding: 30px 5px;
+	border: 1px solid #000000;
 }
 
 .copyrightSection p
@@ -332,7 +344,7 @@ body
 
 #navigation
 {
-	background-color: #004BDC;
+	background-color: #333333;
     padding: 20px 10px;
     z-index: 100;
     width: 100%;
